fix: contrast fixed

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -5,7 +5,7 @@
     
     --headers-color: white;
     --text-color: black;
-    --label-text: navy;
+    --label-text: #01013a;
     --active: yellow;
     --nav-text: white;
 
